--- a/css/estilo.css
+++ b/css/estilo.css
@@ -103,6 +103,15 @@ li{
 
 }
 
+ul.emoticon li{
+	margin-left: 100px;
+}
+
+ul.emoticon{
+	text-align: left;
+	padding-left: 115px;
+}
+
 ul{
 	text-align: center;
 }
@@ -127,7 +136,7 @@ legend{
 }
 
 .legenda{
-	height: 50px;
+	height: 100px;
     
 
 }
