--- a/css/estilo.css
+++ b/css/estilo.css
@@ -165,8 +165,12 @@ fieldset{
 
 #form_login{
 	margin-left: 400px;
-	margin-top: 100px;
+	margin-top: 75px;
 	margin-bottom: 100px;
+}
+
+#form_login #btn_enviar{
+	margin-left: 13%;
 }
 
 
