--- a/css/estilo.css
+++ b/css/estilo.css
@@ -201,6 +201,14 @@ table#form_alterar_senha tr {
 	
 }
 
+#footer{
+	height: 20px;
+	width: auto;
+	text-align: center;
+	margin-top: 50px;
+	background-color: #214a73;
+	color: white;
+}
 
 
 
